fix: match config.php mode in sync check

--- a/roles/m4e/tasks/sync_config.yml
+++ b/roles/m4e/tasks/sync_config.yml
@@ -12,4 +12,4 @@
       remote_src: true
       src: "{{ moodle_config_path }}/config.php"
       dest: "{{ moodle_app }}/config.php"
-      mode: preserve
+      mode: 0660
