ci: create build and release pipeline

--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -2,36 +2,21 @@ apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
   annotations:
-    lighthouse.jenkins-x.io/prependStepsURL: https://raw.githubusercontent.com/jenkins-x/jx3-pipeline-catalog/005e78cf69b643862344397a635736a51dd1bd89/tasks/git-clone/git-clone.yaml
-  name: release
+    lighthouse.jenkins-x.io/prependStepsURL: https://raw.githubusercontent.com/jenkins-x/jx3-pipeline-catalog/005e78cf69b643862344397a635736a51dd1bd89/tasks/git-clone/git-clone-pr.yaml
+  name: pullrequest
 spec:
   pipelineSpec:
-    params:
-    - default: master
-      description: git revision to checkout (branch, tag, sha, ref…)
-      name: revision
-      type: string
     tasks:
     - name: from-build-pack
-      params:
-      - name: revision
-        value: $(params.revision)
       resources: {}
       taskSpec:
         metadata: {}
-        params:
-        - default: master
-          description: git revision to checkout (branch, tag, sha, ref…)
-          name: revision
-          type: string
         stepTemplate:
           env:
           - name: PIPELINE_KIND
-            value: release
+            value: pullrequest
           - name: JX_BATCH_MODE
             value: "true"
-          - name: VERSION
-            value: $(inputs.params.version)
           name: ""
           resources:
             requests:
