--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,12 +18,12 @@ provisioner:
   inventory:
     group_vars:
       all:
-        namespace: ${TEST_OPERATOR_NAMESPACE:-osdk-test}
+        namespace: "{{ lookup('env', 'TEST_OPERATOR_NAMESPACE') | default('osdk-test',true) }}"
     host_vars:
       localhost:
         ansible_python_interpreter: '{{ ansible_playbook_python }}'
         config_dir: ${MOLECULE_PROJECT_DIRECTORY}/config
         samples_dir: ${MOLECULE_PROJECT_DIRECTORY}/config/samples
-        operator_image: ${OPERATOR_IMAGE:-""}
+        operator_image: "{{ lookup('env', 'OPERATOR_IMAGE') | default('',true) }}"
         operator_pull_policy: ${OPERATOR_PULL_POLICY:-"Always"}
         kustomize: ${KUSTOMIZE_PATH:-kustomize}
