--- a/molecule/default/kustomize.yml
+++ b/molecule/default/kustomize.yml
@@ -2,6 +2,7 @@
 - name: Build kustomize testing overlay
   # load_restrictor must be set to none so we can load patch files from the default overlay
   command: '{{ kustomize }} build  --load_restrictor none .'
+  check_mode: false
   args:
     chdir: '{{ config_dir }}/testing'
   register: resources
