ci: update jx pipelines

--- a/.lighthouse/jenkins-x/triggers.yaml
+++ b/.lighthouse/jenkins-x/triggers.yaml
@@ -9,20 +9,14 @@ spec:
     trigger: "/lint"
     rerun_command: "/relint"
     source: "pullrequest.yaml"
-  - name: check
-    context: "check"
-    always_run: true
-    optional: false
-    trigger: "/check"
-    rerun_command: "/recheck"
-    source: "pullrequest.yaml"
-  - name: test
-    context: "test"
+  - name: k8s
+    context: "k8s"
     always_run: false
     optional: false
-    trigger: "/test"
-    rerun_command: "/retest"
+    trigger: (?m)^/test( all| k8s),?(s+|$)
+    rerun_command: /test k8s
     source: "pullrequest.yaml"
+    max_concurrency: 1
   postsubmits:
   - name: release
     context: "release"
