--- a/.lighthouse/jenkins-x/release.yaml
+++ b/.lighthouse/jenkins-x/release.yaml
@@ -30,7 +30,7 @@ spec:
             value: release
           - name: JX_BATCH_MODE
             value: "true"
-          - name: UPDATE_VERSION
+          - name: VERSION_MAKEFILE
             value: Makefile
           - name: PROJECT_TIMESTAMP
             value: midnight
