--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -1,54 +1,47 @@
 apiVersion: tekton.dev/v1beta1
 kind: PipelineRun
 metadata:
-  annotations:
-    lighthouse.jenkins-x.io/prependStepsURL: https://raw.githubusercontent.com/krestomatio/jx3-pipeline-catalog/master/tasks/git-clone/git-clone-pr.yaml
+  creationTimestamp: null
   name: pullrequest
 spec:
   pipelineSpec:
     tasks:
-    - name: from-build-pack
-      resources: {}
-      taskSpec:
-        metadata: {}
-        stepTemplate:
-          env:
-          - name: PIPELINE_KIND
-            value: pullrequest
-          - name: JX_BATCH_MODE
-            value: "true"
-          - name: VERSION_MAKEFILE
-            value: Makefile
-          - name: PROJECT_TIMESTAMP
-            value: midnight
-          name: ""
-          resources:
-            requests:
-              cpu: 400m
-              memory: 512Mi
-          workingDir: /workspace/source
-        steps:
-        - args:
-          - $(JOB_NAME)
-          command:
-          - make
-          image: quay.io/krestomatio/ansible-operator-ci
-          name: pr
-          workingDir: /workspace/source
-          securityContext:
-            privileged: true
-          volumeMounts:
-          - name: libcontainers
-            mountPath: /var/lib/containers
-          - name: shared
-            mountPath: /shared
-        volumes:
-        - name: libcontainers
-          persistentVolumeClaim:
-            claimName: libcontainers-0sd6j3-pvc
-        - name: shared
-          persistentVolumeClaim:
-            claimName: shared-0sd6j3-pvc
+      - name: pullrequest
+        resources: {}
+        taskSpec:
+          metadata: {}
+          stepTemplate:
+            name: ''
+            env:
+              - name: VERSION_MAKEFILE
+                value: "true"
+              - name: PROJECT_TIMESTAMP
+                value: midnight
+            resources:
+              requests:
+                cpu: 400m
+                memory: 512Mi
+            workingDir: /workspace/source
+          steps:
+            - image: uses:krestomatio/jx3-pipeline-catalog/tasks/git-clone/git-clone-pr.yaml@4a2339d4be2ca7f857302ac9441cac7966bfb875
+            - image: quay.io/krestomatio/ansible-operator-ci
+              name: pr
+              args:
+                - $(JOB_NAME)
+              command:
+                - make
+              volumeMounts:
+                - name: libcontainers
+                  mountPath: /var/lib/containers
+                - name: shared
+                  mountPath: /shared
+          volumes:
+            - name: libcontainers
+              persistentVolumeClaim:
+                claimName: libcontainers-0sd6j3-pvc
+            - name: shared
+              persistentVolumeClaim:
+                claimName: shared-0sd6j3-pvc
   podTemplate: {}
   serviceAccountName: tekton-bot
   timeout: 240h0m0s
