--- a/.lighthouse/jenkins-x/pullrequest.yaml
+++ b/.lighthouse/jenkins-x/pullrequest.yaml
@@ -24,7 +24,7 @@ spec:
             workingDir: /workspace/source
           steps:
             - image: uses:krestomatio/jx3-pipeline-catalog/tasks/git-clone/git-clone-pr.yaml@4a2339d4be2ca7f857302ac9441cac7966bfb875
-            - image: quay.io/krestomatio/ansible-operator-ci
+            - image: quay.io/krestomatio/ansible-operator-ci:0.1.5
               name: pr
               args:
                 - $(JOB_NAME)
