refactor: change ingress api version

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -76,7 +76,7 @@ rules:
   ## Rules for ingress
   ##
   - apiGroups:
-      - extensions
+      - networking.k8s.io
     resources:
       - ingresses
     verbs:
