--- a/roles/m4e/tasks/postgres.yml
+++ b/roles/m4e/tasks/postgres.yml
@@ -46,7 +46,8 @@
       vars:
         kind: Deployment
         k8s_state: "{{ postgres_deploy_state | default(postgres_state) }}"
-        k8s_wait: true
+        k8s_wait: "{{ postgres_deploy_wait | default(true) }}"
+        k8s_wait_timeout: "{{ postgres_deploy_wait_timeout | default(120) }}"
         template: "{{ deploy_template }}"
         metadata_name: "{{ postgres_deploy }}"
         annotations: "{{ postgres_deploy_annotations | default(false) }}"
