--- a/config/testing/kustomization.yaml
+++ b/config/testing/kustomization.yaml
@@ -1,7 +1,7 @@
 # Adds namespace to all resources.
-namespace: osdk-test
+namespace: m4e-test
 
-namePrefix: osdk-
+namePrefix: m4e-
 
 # Labels to add to all resources and selectors.
 #commonLabels:
