--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -18,7 +18,7 @@ provisioner:
   inventory:
     group_vars:
       all:
-        namespace: "{{ lookup('env', 'TEST_OPERATOR_NAMESPACE') | default('osdk-test',true) }}"
+        namespace: "{{ lookup('env', 'TEST_OPERATOR_NAMESPACE') | default('m4e-test',true) }}"
     host_vars:
       localhost:
         ansible_python_interpreter: '{{ ansible_playbook_python }}'
