--- a/molecule/kind/converge.yml
+++ b/molecule/kind/converge.yml
@@ -17,7 +17,7 @@
         force_source: yes
 
     - name: Load image into kind cluster
-      command: kind load docker-image --name osdk-test '{{ operator_image }}'
+      command: kind load docker-image --name m4e-test '{{ operator_image }}'
       register: result
       changed_when: '"not yet present" in result.stdout'
 
