--- a/molecule/kind/create.yml
+++ b/molecule/kind/create.yml
@@ -5,4 +5,4 @@
   gather_facts: false
   tasks:
     - name: Create test kind cluster
-      command: kind create cluster --name osdk-test --kubeconfig {{ kubeconfig }}
+      command: kind create cluster --name m4e-test --kubeconfig {{ kubeconfig }}
