--- a/molecule/kind/destroy.yml
+++ b/molecule/kind/destroy.yml
@@ -8,7 +8,7 @@
 
   tasks:
     - name: Destroy test kind cluster
-      command: kind delete cluster --name osdk-test --kubeconfig {{ kubeconfig }}
+      command: kind delete cluster --name m4e-test --kubeconfig {{ kubeconfig }}
 
     - name: Unset pull policy
       command: '{{ kustomize }} edit remove patch pull_policy/{{ operator_pull_policy }}.yaml'
